edition = "2023";

import "names.proto";
import "types.proto";

package mina;
option java_package = "org.mina_lang.proto";

option java_multiple_files = true;

message Attributes {
  uint32 name = 1;
  uint32 sort = 2;
}

message ConstructorFieldEntry {
  uint32 constructor = 1;
  map<uint32, Attributes> fields = 2;
}

message Environment {
  repeated string strings = 1;
  repeated mina.names.Name names = 2;
  repeated mina.types.Sort sorts = 3;
  map<uint32, Attributes> values = 4;
  map<uint32, Attributes> types = 5;
  repeated ConstructorFieldEntry fields = 6;
}